Replaced some deprecated methods.